--- a/style.css
+++ b/style.css
@@ -385,3 +385,68 @@ button {
 .video-info h3 {
   margin: 1px 0; /* Add some space above and below heading */
 }
+.vi-mp4{
+  width: 20px;
+  height: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.video-container {
+  display: flex;
+  flex-wrap: wrap; /* Wrap videos if they overflow the container */
+  border-radius: 26px 26px 26px 26px;
+}
+.video-container video{
+  border-radius: 27px 27px 27px 27px;
+}
+.video-item {
+  width: 370px;
+  height: 210px;
+  margin: 10px; /* Add some margin between videos */
+}
+.video-item-1 {
+  width: 370px;
+  height: 210px;
+  margin: 10px; /* Add some margin between videos */
+}
+.video-item-2 {
+  width: 370px;
+  height: 210px;
+  margin: 10px; /* Add some margin between videos */
+}
+.video-item iframe {
+  width: 100%; /* Stretch iframe to fill the container */
+  height: 100%;
+}
+.suur-im{
+  width: 300px;
+  height: 300px;
+}
+.img-zuu{
+  width: 30px;
+  height: 30px;
+  border-radius: 8px 8px 8px 8px;
+}
+.vi-in{
+  display: flex;
+}
+.vi-inn{
+  display: flex;
+}
+.vi-innn{
+  display: flex;
+}
